--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -42,6 +42,14 @@
             <div class="cart">
               <a href="/cart/show"><i class="fa fa-bag-shopping"></i></a>
             </div>
+            <div
+              class="d-flex justify-content-center align-items-center btn-num"
+            >
+              
+              <small
+                style="padding-bottom:10px;color:rgb(20, 220, 87)"
+              >{{cart}}</small>
+            </div>
           {{/if}}
           <div class="drowdown">
             <a
