--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -16,9 +16,9 @@
       <div class="col-lg-6">
         <div class="footer__nav">
           <ul>
-            <li class="active"><a href="./index.html">Homepage</a></li>
-            <li><a href="./categories.html">Categories</a></li>
-            <li><a href="./blog.html">Our Blog</a></li>
+            <li class="active"><a href="/">Homepage</a></li>
+            <li><a href="/category">Categories</a></li>
+            <li><a href="#">Our Blog</a></li>
             <li><a href="#">Contacts</a></li>
           </ul>
         </div>
